Fix RSS placeholder spacing.

--- a/packages/block-library/src/rss/editor.scss
+++ b/packages/block-library/src/rss/editor.scss
@@ -14,8 +14,8 @@
 	}
 
 	.wp-block-rss__placeholder-input {
-		flex: 1;
-		min-width: 80%;
+		margin: 0 8px 0 0;
+		flex: 1 1 auto;
 	}
 }
 
